Fixed spacing of process button text on mobile

--- a/css/_uswds-theme-custom-styles.scss
+++ b/css/_uswds-theme-custom-styles.scss
@@ -2844,6 +2844,12 @@ code {
   }
 }
 
+.homepage-process__button-text {
+  padding-left: 3rem;
+  text-indent: -2.8rem;
+  line-height: 1.3;
+}
+
 .page-ui-components {
   .usa-font-lead {
     &:first-of-type {
